Added light and dark mode toggle and updated README

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <button class="btn">Generate</button>
     </div>
     <div class="alert-container active"> Password Copied</div>
+   
+    <button id="theme-toggle">🌙 Dark Mode</button>
     <script src="index.js"></script>
 </body>
 </html> 
